--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   },
   "dependencies": {
     "express": "3.4.4",
-    "jade": "*"
+    "ejs": "0.8.5",
+    "iconv-lite": "0.2.11",
+    "cheerio": "0.12.4",
+    "request": "2.27.0"
   }
 }
