--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "application-name",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "node app.js"
-  },
-  "dependencies": {
-    "express": "3.4.4",
-    "ejs": "0.8.5",
-    "iconv-lite": "0.2.11",
-    "cheerio": "0.12.4",
-    "request": "2.27.0",
-    "mongoose": "3.8.1"
-  }
+    "name": "application-name",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "start": "node app.js"
+    },
+    "dependencies": {
+        "express": "3.4.4",
+        "ejs": "0.8.5",
+        "iconv-lite": "0.2.11",
+        "cheerio": "0.12.4",
+        "request": "2.27.0",
+        "mongoose": "3.8.1",
+        "mkdirp": "0.3.5"
+    }
 }
